--- a/src/QRCodeGenerator.css
+++ b/src/QRCodeGenerator.css
@@ -1,5 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .qr-generator {
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 input[type='text'] {
@@ -11,7 +14,6 @@ input[type='text'] {
 }
 
 label {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #fff;
 }
 
@@ -72,6 +74,7 @@ button {
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-family: 'Montserrat', sans-serif;
 }
 
 button:hover {
@@ -116,6 +119,7 @@ button.generating {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
 }
 
 .customization>div {
