--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,15 @@ body{
 
 body{
     background: #4e54c8;  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+    background: -webkit-linear-gradient(270deg, #8f94fb, #4e54c8);  
     width: 100%;
-/*     height:100vh; */
-    
-   
+    min-height: 100vh;
+    height:fit-content;   
+    margin: 1vh 0;
 }
-
+::-webkit-scrollbar{
+    display: none;
+}
 .circles{
     position: absolute;
     top: 0;
